<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunset">
 <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_signup_background"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/main_holder"
            android:alpha="0">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/login_image_description"
                android:src="@drawable/pilogo" />

            <Button
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/oval_button"
                android:text="@string/login_text"
                android:textAlignment="center"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginBottom="15dp"
                android:background="@drawable/oval_button"
                android:text="@string/signup_text"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup"
                android:gravity="center"
                android:id="@+id/desc"
                android:text="@string/signup_login_question"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
       />
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/simple"
                android:layout_height="wrap_content"
                android:text="@string/signup_login_click_here"
                android:padding="0dp"
                android:textAllCaps="false"
                android:textColor="#304FFE"
                android:textStyle="italic"
                android:background="@drawable/anchor_button"
                android:layout_alignBaseline="@+id/desc"
                android:layout_alignBottom="@+id/desc"
                android:layout_toRightOf="@+id/desc"
                android:layout_toEndOf="@+id/desc" />
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
