<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunset"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/login_signup_background"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/login_image_description"
                android:src="@drawable/pilogo" />

            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:paddingBottom="15dp"
                android:hint="email address"
                android:textColorHint="#20ffffff"
                android:textColor="@android:color/white" />
            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:paddingBottom="15dp"
                android:hint="password"
                android:visibility="gone"
                android:translationY="100dp"
                android:alpha="0"
                android:textColorHint="#20ffffff"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginBottom="15dp"
                android:background="@drawable/oval_button"
                android:text="NEXT"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup"
                android:gravity="center"
                android:id="@+id/desc"
                android:text="@string/login_to_go_back"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                />
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/simple"
                android:layout_height="wrap_content"
                android:text="@string/signup_login_click_here"
                android:padding="0dp"
                android:textAllCaps="false"
                android:textColor="#304FFE"
                android:textStyle="italic"
                android:background="@drawable/anchor_button"
                android:layout_alignBottom="@+id/desc"
                android:layout_toEndOf="@+id/desc"
                android:layout_toRightOf="@+id/desc"
                android:layout_below="@+id/signup" />
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
